--- a/demos/main/src/main/res/layout/player_activity.xml
+++ b/demos/main/src/main/res/layout/player_activity.xml
@@ -18,7 +18,7 @@
   android:id="@+id/root"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
-  android:background="#0000FF"
+  android:background="@drawable/muban"
   android:keepScreenOn="true">
 
   <LinearLayout
